<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/blue100"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textSize="50dp"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/create_your_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="Creat your account"
        android:layout_below="@+id/register"
        android:textStyle="italic"
        />


    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawablePadding="8dp"

        android:hint="@string/usrname"
        android:layout_below="@+id/create_your_account"
        android:drawableLeft="@drawable/baseline_person_24"

        />


    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@id/username"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="0dp"

        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/Male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/male"
            android:drawableLeft="@drawable/baseline_male_24"
            android:checked="true"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/female"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:drawableLeft="@drawable/baseline_female_24"/>
    </RadioGroup>



    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawablePadding="8dp"
        android:hint="@string/psword"
        android:layout_below="@+id/username"
        android:drawableLeft="@drawable/baseline_lock_24"/>

    <EditText
        android:id="@+id/repassword"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawablePadding="8dp"
        android:hint="@string/rpsword"
        android:layout_below="@+id/password"
        android:drawableLeft="@drawable/baseline_lock_24"/>





    <TextView
        android:id="@+id/policycmnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="By registering you are agreeing to our Terms of use and Privacy Policy "
        android:textSize="13sp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_below="@+id/repassword"/>

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="350dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/blueA20"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/register"
        android:textColor="@color/blue100"
        android:layout_marginTop="10dp"
        android:layout_below="@id/policycmnt"/>

    <TextView
        android:id="@+id/alhvacmnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Already have an account?"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_below="@+id/btnsignup"/>

    <TextView
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@+id/alhvacmnt"/>

</RelativeLayout>