<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/blue100"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/signin"
        android:textSize="50dp"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/create_your_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="Login your account"
        android:layout_below="@id/signin"
        android:textStyle="italic"
        />

    <EditText
        android:id="@+id/username1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawablePadding="8dp"

        android:hint="@string/usrname"
        android:layout_below="@id/create_your_account"
        android:drawableLeft="@drawable/baseline_person_24"/>

    <EditText
        android:id="@+id/password1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawablePadding="8dp"

        android:hint="@string/psword"
        android:layout_below="@+id/username1"
        android:drawableLeft="@drawable/baseline_lock_24"/>

    <Button
        android:id="@+id/btnsignin1"
        android:layout_width="350dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/blueA20"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="40dp"
        android:text="Sign in"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password1"/>

    <TextView
        android:id="@+id/dnthvacnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Don't have an account?"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_below="@+id/btnsignin1"/>

    <TextView
        android:id="@+id/btnsignup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@+id/dnthvacnt"/>


</RelativeLayout>